--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hot-loader": "^4.13.0",
+    "react-player": "^2.9.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
